[package]
name = "helios-fmt"
version = "0.1.0"
authors = ["Ta-Seen Islam <taseen00.islam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
env_logger = "0.7.1"
helios-parser = { git = "https://github.com/helios-lang/helios", branch = "develop" }
log = "0.4.11"
